--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,7 @@
   <property file="${user.home}/wpilib/wpilib.properties"/>
   <property file="build.properties"/>
   <property file="${user.home}/wpilib/java/${version}/ant/build.properties"/>
+	<property name="target" value="10.21.86.34" />
   
   <import file="${wpilib.ant.dir}/build.xml"/>
 
